# scopyleft.github.com

./: .gitignore  .gitmodules  CNAME  Makefile  README.md  builder.py  generator.py  index.html  index.md  proposition.html  proposition2.html  proposition2.md  proposition3.html  proposition4.md  pyproject.toml  requirements.txt  robots.txt  this-is-markdown.md
administratif/: statuts.md  statuts2.md
bien-etre/: index.html
blog/: index.html
content/: creation-scop.md  personas.md
en/: index.html
formation/: index.html
formation/casperjs/: index.html
formation/django/: index.html
formation/html5-css3/: index.html
formation/javascript/: index.html
formation/meteor/: index.html
formation/product-owner/: index.html
formation/running-lean/: index.html
formation/specification/: index.html
histoire/: index.html
homepage/: index.html
honnetete/: index.html
images/: logo1.pxm
it/: index.html
pages/: bien-etre.md  homepage.md  transparence.md  version-niko.md
prestations/facilitation/: index.html
projets/: index.html
propositions/geonature/: index.html
sources/pages/: bien-etre.md  en.md  formation.md  histoire.md  homepage.md  honnetete.md  it.md  projets.md  transparence.md
sources/static/: packed-print.css  packed.css
sources/templates/: 404.html  _navigation.html  _post.html  base.atom  base.html  base.rss  (+8 more)
static/: CNAME  packed.css
syndication/: flux.atom  flux.rss  index.html
templates/: base.html  blogpost.html  blogposts.html  feed.xml  homepage.html  page.html
transparence/: index.html
version-niko/: index.html
(+47 files in other folders)
